fix: hw letter-spacing

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ p, span {
 h2 {
   margin-bottom: 40px;
   font-size: 19px;
+  letter-spacing: 6px;
   text-align: center;
 }
 
